--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
+		<p>Hihihihihihi!</p>
+
+		<img src="school/cst251/lab15/images/strawberrycake.jpg">
 	</main>
 
 
