--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<main>
 		<p>Hihihihihihi!</p>
 
-		<img src="school/cst251/lab15/images/strawberrycake.jpg">
+		<img src="fengcha.jpg">
 	</main>
 
 
