--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 </head>
 <body>
 	<main>
-		<p>Hihihihihihi!</p>
-
-		<p> say the name, seventeen! </p>
-
-		<img src="./img/fengcha.jpg">
+		<p>Hihihihihihi</p>
 	</main>
 
 
