updated lab3 and cst252

--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
+	<title>Homepage</title>
 	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<main>
-		<p>Hihihihihihi!</p>
-	</main>
+	<div id="content">
+		<div class="title">
+			<h1>WELCOME TO MY HOMEPAGE<br><span>CST 252</span></h1>
+		</div>
 
+		<div class="text">
+			<h1 align="center">INTRODUCTION</h1>
+			<div class="kayla"><img src="./img/kayla.png"></div><p>Hello! My name is Kayla, and I'm from the Bay Area. I like to collect cute stationery and use them to write birthday, thank you, and holiday letters to my friends! I am a night owl who usually sleeps by 3am, and I also feel more productive and creative at night. I love pomeranians and cats, and I can't wait to adopt one of each in a few years. I have two favorite plushies: Mango the Corgi, and Kiwi the Shiba Inu.</p>
+		</div>
 
+		<div class="labs">
+			<h1 align="center">LABS</h1>
+			<ul>
+				<li><a href="lab2/helloworld.html">Lab 2: HTML & CSS Refresher</a></li>
+				<li><a href="lab3/index.html">Lab 3: File Structure and File Transfer</a></li>
+				<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
+				<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
+				<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+			</ul>
+		</div>
 </body>
 </html>
