--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 3 - File Structure and File Transfer</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+		<div class="title">
+			<h1>LAB 3: FILE STRUCTURE AND FILE TRANSFER</h1>
+		</div>
+
+	<div id="content">
+
+			<div class="text">
+				<h1 align="center">LAB SUMMARY</h1>
+					<p>This purpose of this lab was to create a local file structure to organize our files better, and then upload them to the server. After creating the file structure, which was already made for us, we were to create index.html files in our CST 252 and Lab 3 folders. I stylized my pages using CSS, and then uploaded the files to the server using GitHub.</p>
+			</div>
+			<div class="text">
+				<h1 align="center">CHALLENGES</h1>
+					<p>The only challenge that we ran into was with Cyberduck. It showed us the same login error message, so it must've been an issue with the server. As mentioned in the summary, we used GitHub to upload to server. Besides that, other issues were from minor typos and forgetting certain tags and properties in HTML and CSS. This was easily solved by checking each other's codes and going back to CST 251 labs to rejog our memories.</p>
+			</div>
+			<div class="text">
+				<h1 align="center">RESULTS</h1>
+					<p>The results can be seen on this page. Scroll down to the screenshots section to take a look at my progress during this lab. I also formatted this page using CSS Flexbox, so you can resize your browser to see how the format of the site content changes.</p>
+			</div>
+			<div class="pics">
+				<h1 align="center">SCREENSHOTS</h1>
+					<div class="row1" align="center">
+						<img src="./img/filestructure.png">
+						<img src="./img/homepagehtml.png">
+						<img src="./img/lab3html.png">
+						<p>Left to right: CST 252 local file structure, CST 252 index HTML code, Lab 3 HMTL code</p>
+					</div>
+					<div class="row2" align="center">
+						<img src="./img/homepage.png">
+						<img src="./img/lab3.png">
+						<p>Left to right: Screenshot of CST 252 index, screenshot of Lab 3 index</p>
+					</div>
+					<div class="row3" align="center">
+						<img src="./img/cyberduckissue.png">
+
+					</div>
+					<div class="row4">
+						<h1 align="center">BONUS</h1>
+							<img src="./img/homepage.png">I am hovering over the Lab 3 link. I removed the underlining from the links, added white color to them, and made them "glow" when hovered over.
+							<br><a href="../css/site.css">LINK TO CSS HERE</a>
+					</div>
+			</div>
+
+	</div>
+
+
+
+
+
+
 
 </body>
 </html>
