mini typo in css link

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lab 3 - File Structure and File Transfer</title>
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" type="text/css" href="./css/lab.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -46,7 +46,6 @@
 					<div class="row4">
 						<h1 align="center">BONUS</h1>
 							<img src="./img/homepage.png">I am hovering over the Lab 3 link. I removed the underlining from the links, added white color to them, and made them "glow" when hovered over.
-							<br><a href="../css/site.css">LINK TO CSS HERE</a>
 					</div>
 			</div>
 
