added screenshots and back to home link for lab3

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -33,21 +33,25 @@
 						<img src="./img/homepagehtml.png">
 						<img src="./img/lab3html.png">
 						<p>Left to right: CST 252 local file structure, CST 252 index HTML code, Lab 3 HMTL code</p>
-					</div>
+					</div><br>
 					<div class="row2" align="center">
 						<img src="./img/homepage.png">
 						<img src="./img/lab3.png">
-						<p>Left to right: Screenshot of CST 252 index, screenshot of Lab 3 index</p>
-					</div>
+						<p>Left to right: Screenshot of CST 252 local index, screenshot of Lab 3 index</p>
+					</div><br>
 					<div class="row3" align="center">
 						<img src="./img/cyberduckissue.png">
-
-					</div>
-					<div class="row4">
+						<img src="./img/filestructureserver.png">
+						<p>Left to right: Screenshot of Cyberduck error, screenshot of file structure in GitHub in browser</p>
+					</div><br>
+					<div class="row4" align="center">
 						<h1 align="center">BONUS</h1>
-							<img src="./img/homepage.png">I am hovering over the Lab 3 link. I removed the underlining from the links, added white color to them, and made them "glow" when hovered over.
+							<img src="./img/homepageserver.png">
 					</div>
+					<p>This is my homepage on the GitHub server. Ashlyn and I worked together on this; she helped me fix minor typos and add certain tags/properties. In the above screenshot, I am hovering over the Lab 3 link. I removed the underlining from the links, added white color to them, and made them "glow" when hovered over.</p>
 			</div>
+
+		<a href="../index.html">BACK TO HOME</a>
 
 	</div>
 
