--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,79 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 4 - Pseudocoding and Problem-solving</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+
+		<div class="title">
+			<h1>LAB 4: PSEUDOCODING AND PROBLEM SOLVING</h1>
+		</div>
+
+<div id="content">
+
+	<div class="instructions">
+		<h1>How to Shuffle a Deck of Cards (Riffle Shuffle)</h1>
+			<ol>
+				<li>Split the deck into two equal piles. </li>
+				<li>Take one pile into each hand. </li>
+				<li>Hold the base of the piles with two fingers, and hold the tops with your thumbs. </li>
+				<li>Bend the piles with your fingers and thumbs, and then release your thumbs, letting the cards move and pile on top of each other. </li>
+				<li>Combine piles and start again, if needed. </li>
+			</ol>
+	</div>
+
+	<div class="instructions">
+		<h1> Creating a Rock-Paper-Scissors Game </h1>
+			<ol>
+				<li> Create choices: rock, paper, and scissors. </li>
+				<li> Create an opponent with randomized choices. </li>
+				<li> Allow user to make a choice. </li>
+				<li> Allow computer to make a choice. </li>
+				<li> Create a scenario where the user wins. </li>
+				<li> Test. </li>
+			</ol>
+	</div>
+
+	<div class="comments">
+		<pre><code>
+// How to Shuffle a Deck of Cards (Riffle Shuffle)
+	// Split the deck into two equal piles.
+	// Take one pile into each hand.
+	// Hold the base of the piles with two fingers, and hold the tops with your thumbs.
+	// Bend the piles with your fingers and thumbs, and then release your thumbs, letting the cards move and pile on top of each other.
+	// Combine piles and start again, if needed.
+
+// Creating a Rock-Paper-Scissors Game
+	// Create choices: rock, paper, and scissors.
+	// Create an opponent with randomized choices.
+	// Allow user to make a choice.
+	// Allow computer to make a choice.
+	// Create a scenario where the user wins.
+	// Test.
+		</code></pre>
+	</div>
+
+		<div class="text">
+			<h1 align="center">LAB SUMMARY</h1>
+				<p>For this lab, we learned how to pseudocode using a Javascript file, and turning them into comments. We haven't learned how to do anything with Javascript yet, but pseudocoding seems like a start. As for the problem-solving portion, we were to come up with two sets of basic, or "high-level," instructions: how to shuffle a deck of cards, and creating a rock, paper, scissors game on your computer.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">CHALLENGES</h1>
+				<p>Even though this lab was quite simple, we struggled a little bit with Atom, since we used it to collaborate this time to work on the instructions together, instead of working separately on Sublime (even though we both prefer Sublime). Perhaps it could be due to connection issues, but if either one of us would be idle on Atom for at least 1-2 minutes, it would the collaborator out of the portal. This occurred around 4 times. It wasn't exactly an obstruction to our work flow, but it was quite annoying as it kept happening. Another thing we struggled with was coming up with the right terms for the instructions. It was difficult for us to explain the computer task because we didn't know the proper technical terms for it. Maybe it didn't matter for this lab, but we still wanted to make it sound proper.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">RESULTS</h1>
+				<p>The results can be seen in the sections above (instruction outlines and Javascript comments/pseudocoding).</p>
+		</div>
+
+</div>
+
+<a href="../index.html">BACK TO HOME</a>
+
 
 </body>
 </html>
