--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 5 - Data Types and Variables</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+		<div class="title">
+			<h1>LAB 5: DATA TYPES AND VARIABLES</h1>
+		</div>
+
+	<div id="content">
+		<div class="text">
+			<h1 align="center">LAB SUMMARY</h1>
+				<p>This lab was focused on basic Javascript variables and data types as a starter to more Javascript work later on. We experimented with it using the Javascript Console in our browsers, and then moving to the actual Javascript file in Sublime to recreate what we did in the Console.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">CHALLENGES</h1>
+				<p>We had no major challenges with this lab, as it was pretty straightforward and simple. We did forget what booleans were, but we were able to move on smoothly with a brief look back at the lecture.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">RESULTS</h1>
+				<p>The results can be seen below with the details of my sister's car.</p>
+		</div>
+	</div>
+<hr>
+	<div id="content">
+		<div class="javascript">
+			<h1>Script Output</h1>
+				<img src="./img/car.png">
+				<p><script src="js/lab.js"></script></p>
+		</div>
+
+	</div>	
+
+	<a href="../index.html">BACK TO HOME</a><br>
+	<br>
 
 </body>
 </html>
