--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<title>Lab 6 - Arrays and Objects</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+	<div class="title">
+			<h1>LAB 6: ARRAYS AND OBJECTS</h1>
+		</div>
+
+	<div id="content">
+		<div class="text">
+			<h1 align="center">LAB SUMMARY</h1>
+				<p>This lab was focused on experimenting with Javascript arrays and objects. According to the lecture, arrays are used to store data in an ordered list, and objects are used to structure that data. Like the previous lab, we used the Console in the browser Inspect to test how the codes would come out as. After that, we moved to Sublime to enter it in the Javascript file.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">CHALLENGES</h1>
+				<p>We had no major challenges with this lab, except for forgetting what we had to do. We had to rejog our memories with the lecture slides, as well as using the screenshots on the assignment page to remember how arrays and objects worked. After entering everything into the Javascript file in Sublime, a few things didn't appear. We went into Inspect to figure out what went wrong, and turns out it was an extra or missing semicolon. We're starting to get used to using Inspect to look into issues like these.</p>
+		</div>
+		<div class="text">
+			<h1 align="center">RESULTS</h1>
+				<p>The results can be seen below in the Script Output section.</p>
+		</div>
+	</div>
+<hr>
+	<div id="content">
+		<div class="javascript">
+			<h1>Script Output</h1>
+				<img src="./img/car.jpg">
+				<p><script src="./js/lab.js"></script></p>
+		</div>
+
+	</div>	
+
+	<a href="../index.html">BACK TO HOME</a><br>
+	<br>
 
 </body>
 </html>
