--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 				<li><a href="lab4/index.html">Lab 4: Pseudocoding and Problem-solving</a></li>
 				<li><a href="lab5/index.html">Lab 5: Data Types and Variables</a></li>
 				<li><a href="lab6/index.html">Lab 6: Arrays and Objects</a></li>
+				<li><a href="lab7/index.html">Lab 7: Functions</a></li>
+				<li><a href="lab8/index.html">Lab 8: Anon Functions and Callbacks</a></li>
+				<li><a href="lab9/index.html">Lab 9: JavaScript for the Web</a></li>
+				<li><a href="lab10/index.html">Lab 10: JavaScript Events and Forms</a></li>
+				<li><a href="lab11/index.html">Lab 11: Conditionals</a></li>
+				<li><a href="lab12/index.html">Lab 12: Loops</a></li>
+				<li><a href="lab13/index.html">Lab 13: Basic Debugging</a></li>
 			</ul>
 		</div>
 </body>
