--- a/lab7/index.html
+++ b/lab7/index.html
@@ -15,22 +15,22 @@
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p></p>
+				<p>This lab was focused on writing functions that take user input. The function that we created was a mini-pop up window ("window.prompt()") at the top of the browser window that allows the user to enter their name. The output would appear on the website.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p></p>
+				<p>There weren't that many challenges that we came across, aside from needing to revisit the lecture slides to remember the things we learned from last class. We also found ourselves following what was on the screenshots on the lab page, so I feel like we haven't completely understood the lecture contents yet. Other than that, as usual, we occasionally had mini typos and errors, which were quickly found and fixed with each other's help and review.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p></p>
+				<p>The results can be seen while clicking onto this page (the window prompt), as well as the Javascript output, which is in the Script Output section. Refresh the page to see the window prompt again and enter in a new name. Perhaps you can enter in your friends' names to find out who they exist as in the other dimension...</p>
 		</div>
 	</div>
 <hr>
 	<div id="content">
 		<div class="javascript">
 			<h1>Script Output</h1>
-				<img src="./img/car.jpg">
+				<img src="./img/dimension.png">
 				<p><script src="./js/lab.js"></script></p>
 		</div>
 
