added more labs + did lab 13

--- a/lab17/index.html
+++ b/lab17/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 13 - Basic Debugging</title>
+	<title>Lab 17 - Advanced jQuery</title>
 	<script src="./js/lab.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
@@ -10,29 +10,31 @@
 <body>
 
 	<div class="title">
-			<h1>LAB 13: BASIC DEBUGGING</h1>
+			<h1>LAB 17: ADVANCED JQUERY</h1>
 	</div>
 
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p>This lab was for debugging our old labs, if necessary. Ashlyn and I had no labs that needed debugging, since we tended to solve all our problems as we progress through the labs. We went back and debugged them anyway, just for the sake of the assignment, even though we did not see any differences.</p>
+				<p></p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p>We had no challenges with this lab, as all we had to do was input "debugger" into our labs, and called it a day. </p>
+				<p></p>
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p>There are screenshots of the "debugged" labs below in the Debugging section.</p>
+				<p></p>
 		</div>
 	</div>
 <hr>
 	<div id="content">
-		<div class="debugging">
-			<h1>Debugging</h1>
-				<img src="./img/lab11debug.png">
-				<img src="./img/lab12debug.png">
+		<div class="javascript">
+			<h1>Javascript Output</h1>
+
+				<div id="output">
+				</div>
+				
 		</div>
 
 	</div>	
