--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
 				<li><a href="lab11/index.html">Lab 11: Conditionals</a></li>
 				<li><a href="lab12/index.html">Lab 12: Loops</a></li>
 				<li><a href="lab13/index.html">Lab 13: Basic Debugging</a></li>
+				<li><a href="lab14/index.html">Lab 14: Javascript Classes and Objects</a></li>
+				<li><a href="lab15/index.html">Lab 15: Object-Oriented Design</a></li>
+				<li><a href="lab16/index.html">Lab 16: Libraries & Intro to jQuery</a></li>
+				<li><a href="lab17/index.html">Lab 17: Advanced jQuery</a></li>
+				<li><a href="lab18/index.html">Lab 18: Libraries and Frameworks 1</a></li>
+				<li><a href="lab19/index.html">Lab 19: AJAX</a></li>
+				<li><a href="lab20/index.html">Lab 20: JSON and APIs</a></li>
+				<li><a href="lab21/index.html">Lab 21: Git and Github</a></li>
 			</ul>
 		</div>
 </body>
