--- a/lab14/index.html
+++ b/lab14/index.html
@@ -10,21 +10,21 @@
 <body>
 
 	<div class="title">
-			<h1>LAB 13: JAVASCRIPT CLASSES AND OBJECTS</h1>
+			<h1>LAB 14: JAVASCRIPT CLASSES AND OBJECTS</h1>
 	</div>
 
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p></p>
+				<p>For this lab, we were to create a Javascript constructor that returned a string using the method info( ). By instantiating the objects with the constructor, we were able to call the info( ) and have the output display on our pages.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p></p>
+				<p>We had no major challenges with this lab, since we already did this in class. Doing it in class allowed this lab go by smoothly, as well as allowed us to understand the purpose of this code and what it does. A minor error that my partner had was "cannot set property 'innerHTML' of null," which confused the both of us. We compared our codes, but they looked identical! I thought about it. Why did it specify "innerHTML?" I took a look at her HTML for any issues, and found that the "defer" was in the wrong place in her script tag in the head. That solved everything!</p>
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p></p>
+				<p>The results can be seen in the Javascript Output section below.</p>
 		</div>
 	</div>
 <hr>
@@ -32,8 +32,10 @@
 		<div class="javascript">
 			<h1>Javascript Output</h1>
 
+				<img src="./img/car.png">
 				<div id="output">
 				</div>
+
 				
 		</div>
 
