fixed lab 15 img

--- a/lab15/index.html
+++ b/lab15/index.html
@@ -30,6 +30,7 @@
 <hr>
 	<div id="content">
 		<div class="javascript">
+
 			<h1>OOP Design</h1>
 				<h2>1. Understand the Problem</h2>
 					<p>• Set up game with board and players<br>
@@ -99,10 +100,11 @@ class Hangman
 
     check_loss
         if board says body is complete
-            display loss message</pre>
+            display loss message</pre><br>
+				
+				<img src="./img/car.png">
 				<div id="output">
 				</div>
-				
 		</div>
 
 	</div>	
