--- a/lab16/index.html
+++ b/lab16/index.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>Lab 16 - Libraries & Intro to jQuery</title>
-	<script src="./js/lab.js" defer></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="js/lab.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
 <body>
 
@@ -16,15 +18,15 @@
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p></p>
+				<p>This lab was focused on experimenting with jQuery, as we have just started learning about it. We were to create and style a button using jQuery only, and not with HTML, Javascript, and CSS like we have been doing for the past few labs. After creating the button, we added an alert function to the button so it would prompt a pop-up window in the browser.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p></p>
+				<p>There were no challenges with this lab, expect for a short, minor struggle in trying to go about creating the button without using HTML. With the lecture notes and help from each other, we were able to breeze through this lab.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p></p>
+				<p>Click the green button below to see the results!</p>
 		</div>
 	</div>
 <hr>
