--- a/lab18/index.html
+++ b/lab18/index.html
@@ -4,7 +4,7 @@
 	<title>Lab 18 - Libraries and Frameworks 1</title>
 	<script src="./js/lab.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<!-- Latest compiled and minified Bootstrap CSS -->
  	<link rel="stylesheet"
  	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
