--- a/lab19/index.html
+++ b/lab19/index.html
@@ -5,6 +5,7 @@
 	<script src="./js/lab.js" defer></script>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -16,15 +17,15 @@
 	<div id="content">
 		<div class="text">
 			<h1 align="center">LAB SUMMARY</h1>
-				<p></p>
+				<p>This lab is comprised of utilizing AJAX as a data retrieval tool in conjugation with jQuery, as well as using APIs.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">CHALLENGES</h1>
-				<p></p>
+				<p>We didn't know how to make the API work, so we ended up using Wes' code in JSFiddle. Our main problem probably stemmed from api key, or something else in the data: {} under $.ajax. We have tried out multiple different APIs, and we're most likely missing something, since it's not just copy and paste the URL and we're good. We probably had to type up more stuff in $.ajax, but we don't know what to do. Since we know Wes' code worked, we settled for it.</p>
 		</div>
 		<div class="text">
 			<h1 align="center">RESULTS</h1>
-				<p></p>
+				<p>Click the button to see the results. Click on the JS File link to see the code (or maybe not because it's Wes' and we all know it's properly coded).</p>
 		</div>
 	</div>
 <hr>
@@ -32,8 +33,10 @@
 		<div class="javascript">
 			<h1>Javascript Output</h1>
 
+				<button id="activate">Press press press!</button>
 				<div id="output">
 				</div>
+
 				
 		</div>
 
