--- a/lab19/index.html
+++ b/lab19/index.html
@@ -33,10 +33,12 @@
 		<div class="javascript">
 			<h1>Javascript Output</h1>
 
-				<button id="activate">Press press press!</button>
+				<button id="activate">Random Cat Facts</button>
+
 				<div id="output">
 				</div>
 
+				<br>
 				
 		</div>
 
