--- a/lab19/index.html
+++ b/lab19/index.html
@@ -46,7 +46,7 @@
 				Our thought process was that now that we knew how to properly request one API, the way the second API is coded should be the same. We copied and pasted the code from the first $.ajax API request, changed the URL, variables, names, etc., and placed them in various places in the JS code. We tried placing it in a new .done(function(data), new $.ajax ​after ​the .done(function(data) from the first API, and other areas. Nothing would work, and errors would always come up in the Console as undefined.So now that we know it at least appears in the page, but we’re not defining it properly.</p>
 				<p>We did some research, but struggled to get results due to not knowing the correct keywords. It took us a few searches to get to where we wanted, until we came across a code by Stack Overflow user Timothy Aaron, and he suggested nesting the second API request in the output function from the first API request. We didn’t want to scrap the code we already had, so we applied it differently to our code. All we did was just place the second $.ajax inside the .done(function(data)), and then used success: to place another function(data), which is where all the output info would go. It worked! To make sure it was working properly, we put something in the Console.
 				We spent quite a long time trying to figure this out, and the main challenge was trying to place the second API in the right area.</p>
-				<p>I’m honestly really proud of this. : )</p>
+				<p>I’m honestly really proud of this. ｡•́ᴗ•̀｡</p>
 				
 		</div>
 
